fixing deeplinks and horizontal overflow

--- a/src/apps/stores/web/store/components/catalog/style.less
+++ b/src/apps/stores/web/store/components/catalog/style.less
@@ -52,8 +52,6 @@
       border-right: none;
     }
   }
-  border-right: 1px dashed fadeout(@black, 90);
-  border-bottom: 1px dashed fadeout(@black, 90);
   &:hover {
     background-color: fadeout(@black, 97);
   }
