--- a/src/apps/stores/web/store/index.less
+++ b/src/apps/stores/web/store/index.less
@@ -21,6 +21,7 @@ body {
   padding: 0;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 #app {
   width: 100%;
